[package]
name = "coppice"
version = "0.2.0"
edition = "2021"
description = "Dynamic programming library for acyclic analytical queries"
license = "MIT"

[dependencies]
merge = "0.1"
quinine = "0.2"
rayon = "1"
umash = "0.6"

[dev-dependencies]
rusty-fork = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
